# ocr-llm-resume-analyse

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
scripts/: init-mongo.js
src/application/interfaces/: repositories.py  services.py
src/application/use_cases/: analyze_curriculums.py  audit_operations.py  audit_use_cases.py
src/domain/entities/: curriculum.py
src/domain/value_objects/: curriculum_values.py
src/infrastructure/container/: dependency_container.py
src/infrastructure/llm/: transformers_service.py
src/infrastructure/ocr/: tesseract_extractor.py
src/infrastructure/persistence/: mongodb_repository.py
src/presentation/api/: controllers.py  models.py
